make buttons cleaner with alignment and color fixes

--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,16 @@
     padding: 3%;
     margin: 0px auto;
     box-sizing: border-box;
+    background-color: #7EB2DD;
+    border-radius: 15px;
 }
 
 .display {
     height: 22%;
-    /* padding: 5%; */
     border: 3px solid black;
     box-sizing: border-box;
+    background-color: #596475;
+    color: #D1CFE2;
 }
 
 .buttons {
@@ -24,14 +27,22 @@
 }
 
 .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 23%;
     height: 14%;
     background-color: 'lightblue';
-    text-align: center;
-    border-radius: 3px;
-    border: 1px solid green;
+    font-weight: bold;
+    font-size: 25px;
+    font-family: 'Georgia';
+    border-radius: 6px;
+    background-color: #445E93;
+    color: #D1CFE2;
+    box-shadow: 2px 2px 2px black;
 }
 
 .equals {
     flex-grow: 2;
+    background-color: #F93943;
 }
